# curatio

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.cache/: label_cache.json
.github/workflows/: ci.yml
assets/: architecture.md
eval/: bench.py  inject.py  plot.py  run.py  stress.py
eval/results/: bench_input.parquet  eval_report.json  plot_data.json
models/: minhash.json  quality_model.json
rust/: Cargo.toml
rust/src/: bench.rs  dedup.rs  heuristics.rs  main.rs  metrics.rs  minhash.rs  pipeline.rs  quality.rs  sink.rs
src/: config.py  models.py
src/api/: app.py
src/curate/: consumer.py  dedup.py  heuristics.py  minhash.py  quality.py
src/embedding/: service.py
src/label/: judge.py  train.py
src/metrics/: store.py
src/sink/: writer.py
src/source/: producer.py
tests/: test_dedup.py  test_heuristics.py  test_metrics.py  test_minhash.py  test_smoke.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
