[project]
name = "Curatio"
version = "0.1.0"
description = "Real-time training-data curation pipeline on Cohere Embed v4 + Command A"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
  "cohere>=7.0",
  "confluent-kafka>=2.3",
  "datasets>=2.18",
  "hnswlib>=0.8",
  "scikit-learn>=1.4",
  "numpy>=1.26",
  "diskcache>=5.6",
  "pyarrow>=15.0",
  "duckdb>=0.10",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "tenacity>=8.2",
  "py3langid>=0.3",     # drop-in langid fork: identical classifications, ~6x faster (SC4 hot path)
  "structlog>=24.1",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.3", "mypy>=1.9", "langid>=1.1.6"]  # langid = eval/bench.py naive baseline only

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "eval*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
